Fix vercel.json with correct wsgi path

--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,14 @@
   "routes": [
     {
       "src": "/static/(.*)",
+      "headers": {
+        "cache-control": "max-age=31536000, immutable"
+      },
       "dest": "/static/$1"
     },
     {
       "src": "/(.*)",
       "dest": "FinanceFlow/wsgi.py"
     }
-  ],
-  "postinstall": "python manage.py migrate && python manage.py collectstatic --noinput"
+  ]
 }
