--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,27 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "FinanceFlow/wsgi.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "headers": {
-        "cache-control": "max-age=31536000, immutable"
+    "version": 2,
+    "builds": [
+      {
+        "src": "FinanceFlow/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "FinanceFlow/wsgi.py"
-    }
-  ]
-}
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "FinanceFlow/wsgi.py"
+      }
+    ]
+  }
